--- a/client/.env
+++ b/client/.env
@@ -1,3 +1,3 @@
-VITE_CLERK_PUBLISHABLE_KEY="----- Clerk Publishable Key -----"
-VITE_BACKEND_URL = 'http://localhost:5000'
+VITE_CLERK_PUBLISHABLE_KEY=pk_test_aG9wZWZ1bC1tYXN0b2Rvbi00OC5jbGVyay5hY2NvdW50cy5kZXYk
+VITE_BACKEND_URL = 'https://lms-full-stack-server-zeta-flax.vercel.app'
 VITE_CURRENCY = '$'
